fixed overflow-x due to mobile nav

--- a/app/scss/base/_globals.scss
+++ b/app/scss/base/_globals.scss
@@ -7,6 +7,7 @@
 html {
   font-size: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
   scroll-behavior: smooth;
 
   @media (min-width: 768px) {
@@ -18,8 +19,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: Inter, Roboto, sans-serif;
-  line-height: 1.4;
   overflow-x: hidden;
+  line-height: 1.4;
   color: var(--blue-900);
   background-color: white;
 }
