--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -55,7 +55,7 @@
     font-weight: 600;
 
     @media (max-width: 992px) {
-      position: fixed;
+      position: absolute;
       z-index: 1;
       top: 0;
       right: 0;
